hphp/hack/test/typecheck/coeffects/closures_implicit.php.exp
File "closures_implicit.php", line 11, characters 24-40:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_implicit.php", line 8, characters 22-25:
  From this declaration, the context of this function body provides the capability set {Rx}
  File "closures_implicit.php", line 6, characters 27-34:
  But the function being called requires the capability set {NonDet, RxLocal, Throwing<mixed>}
File "closures_implicit.php", line 28, characters 10-21:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_implicit.php", line 26, characters 36-44:
  From this declaration, the context of this function body provides the capability set {NonDet}
  File "closures_implicit.php", line 8, characters 22-25:
  But the function being called requires the capability set {Rx}
File "closures_implicit.php", line 32, characters 12-37:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_implicit.php", line 30, characters 5-8:
  From this declaration, the context of this function body provides the capability set {Rx}
  File "closures_implicit.php", line 26, characters 36-44:
  But the function being called requires the capability set {NonDet}
